major updates api working

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,5 @@
-/** @format */
-
-$success: #0ee636;
+$success: #467d46;
 $btn-border-width: 3px;
 
-@import 'bootstrap/scss/functions';
+@import'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
