--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,3 @@
-/** @format */
-@import 'scss/variables';
-@import 'bootstrap/scss/bootstrap';
 
-.book .card-title {
-	color: blue;
-}
+@import 'variables';
+@import 'bootstrap/scss/bootstrap';
